squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-edge_cases-parent_scope.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for edge_cases/parent_scope.nut
---
- If
- LeftParenthesis
- String: a
- In
- This
- RightParenthesis
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: a
- Period
- Identifier: tostring
- LeftParenthesis
- RightParenthesis
- Plus
- String: "\n"
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: print
- LeftParenthesis
- String: "root: "
- RightParenthesis
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: getroottable
- LeftParenthesis
- RightParenthesis
- RightParenthesis
- Newline
- Identifier: assert
- LeftParenthesis
- This
- Equals
- Identifier: getroottable
- LeftParenthesis
- RightParenthesis
- RightParenthesis
