squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-edge_cases-root_delegate.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for edge_cases/root_delegate.nut
---
- Identifier: new_root
- NewSlot
- LeftCurlyBrace
- Newline
- Identifier: a
- Assign
- String: Hello from new_root
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: new_root_del
- NewSlot
- LeftCurlyBrace
- Newline
- Identifier: b
- Assign
- String: Hello from new_root_del
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: array_tostring
- LeftParenthesis
- Identifier: arr
- RightParenthesis
- LeftCurlyBrace
- Newline
- Local
- Identifier: str
- Assign
- String: "["
- Newline
- ForEach
- LeftParenthesis
- Identifier: idx
- Comma
- Identifier: val
- In
- Identifier: arr
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: str
- Assign
- Identifier: str
- Plus
- Identifier: val
- Newline
- If
- LeftParenthesis
- Identifier: idx
- LessThan
- Identifier: arr
- Period
- Identifier: len
- LeftParenthesis
- RightParenthesis
- Minus
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: str
- Assign
- Identifier: str
- Plus
- String: ", "
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Return
- Identifier: str
- Plus
- String: "]"
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: new_root
- Period
- Identifier: setdelegate
- LeftParenthesis
- Identifier: new_root_del
- RightParenthesis
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: new_root
- Period
- Identifier: a
- Plus
- String: "\n"
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: new_root
- Period
- Identifier: b
- Plus
- String: "\n"
- RightParenthesis
- Newline
- Newline
- Function
- Identifier: is_changed
- LeftParenthesis
- Identifier: print
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- DoubleColon
- Identifier: a
- Plus
- String: "\n"
- RightParenthesis
- Newline
- Identifier: print
- LeftParenthesis
- DoubleColon
- Identifier: b
- Plus
- String: "\n"
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: is_changed
- Period
- Identifier: setroot
- LeftParenthesis
- Identifier: new_root
- RightParenthesis
- Newline
- Newline
- Identifier: is_changed
- LeftParenthesis
- Identifier: print
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "Done\n"
- RightParenthesis
- Newline
- Newline
- Newline
- Newline
- Newline
- Newline
