squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-parse_test-newlines.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for parse_test/newlines.nut
---
- Newline
- If
- Newline
- LeftParenthesis
- Newline
- Integer: 1
- Newline
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "Yes"
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: test
- LeftParenthesis
- Newline
- Identifier: a
- Newline
- Comma
- Newline
- Identifier: b
- Comma
- Newline
- Identifier: c
- Newline
- RightParenthesis
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: a
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: b
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: c
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- Newline
- LeftCurlyBrace
- Newline
- Identifier: a
- NewSlot
- Newline
- Integer: 1
- Newline
- Identifier: b
- NewSlot
- Newline
- Integer: 2
- Newline
- Identifier: c
- NewSlot
- Newline
- Integer: 3
- Newline
- RightCurlyBrace
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Newline
- String: "\n"
- Newline
- RightParenthesis
- Newline
- Newline
- Identifier: a
- NewSlot
- Newline
- Integer: 1
- Plus
- Newline
- Integer: 5
- Plus
- Newline
- Integer: 6
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: a
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "\n"
- RightParenthesis
- Newline
- Newline
- Class
- Identifier: TestClass
- LeftCurlyBrace
- Newline
- Identifier: test
- Assign
- Integer: 1
- Newline
- Identifier: test2
- Assign
- Integer: 2
- Newline
- Identifier: test3
- Assign
- Newline
- Function
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- RightCurlyBrace
- Newline
- Identifier: test4
- Newline
- Assign
- Newline
- Function
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- RightCurlyBrace
- Newline
- RightCurlyBrace
