squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-squirrel_repo-ackermann.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for squirrel_repo/ackermann.nut
---
- Newline
- Newline
- Function
- Identifier: Ack
- LeftParenthesis
- Identifier: M
- Comma
- Identifier: N
- RightParenthesis
- LeftCurlyBrace
- Newline
- If
- LeftParenthesis
- Identifier: M
- Equals
- Integer: 0
- RightParenthesis
- Return
- LeftParenthesis
- Identifier: N
- Plus
- Integer: 1
- RightParenthesis
- Semicolon
- Newline
- If
- LeftParenthesis
- Identifier: N
- Equals
- Integer: 0
- RightParenthesis
- Return
- LeftParenthesis
- Identifier: Ack
- LeftParenthesis
- Identifier: M
- Minus
- Integer: 1
- Comma
- Integer: 1
- RightParenthesis
- RightParenthesis
- Semicolon
- Newline
- Return
- LeftParenthesis
- Identifier: Ack
- LeftParenthesis
- Identifier: M
- Minus
- Integer: 1
- Comma
- Identifier: Ack
- LeftParenthesis
- Identifier: M
- Comma
- LeftParenthesis
- Identifier: N
- Minus
- Integer: 1
- RightParenthesis
- RightParenthesis
- RightParenthesis
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Local
- Identifier: n
- Semicolon
- Newline
- Newline
- If
- LeftParenthesis
- Identifier: vargv
- Period
- Identifier: len
- LeftParenthesis
- RightParenthesis
- DoesNotEqual
- Integer: 0
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: n
- Assign
- Identifier: vargv
- LeftSquareBracket
- Integer: 0
- RightSquareBracket
- Period
- Identifier: tointeger
- LeftParenthesis
- RightParenthesis
- Semicolon
- Newline
- If
- LeftParenthesis
- Identifier: n
- LessThan
- Integer: 1
- RightParenthesis
- Identifier: n
- Assign
- Integer: 1
- Semicolon
- Newline
- RightCurlyBrace
- Else
- LeftCurlyBrace
- Newline
- Identifier: n
- Assign
- Integer: 1
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- String: n=
- Plus
- Identifier: n
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Identifier: print
- LeftParenthesis
- String: "Ack(3,"
- Plus
- Identifier: n
- Plus
- String: "):"
- Plus
- Identifier: Ack
- LeftParenthesis
- Integer: 3
- Comma
- Identifier: n
- RightParenthesis
- RightParenthesis
- Semicolon
- Newline
- Newline
