squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-squirrel_repo-class.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for squirrel_repo/class.nut
---
- Newline
- Newline
- Class
- Identifier: BaseVector
- LeftCurlyBrace
- Newline
- Identifier: constructor
- LeftParenthesis
- Varargs
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- If
- LeftParenthesis
- Identifier: vargv
- Period
- Identifier: len
- LeftParenthesis
- RightParenthesis
- GreaterThanEquals
- Integer: 3
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: x
- Assign
- Identifier: vargv
- LeftSquareBracket
- Integer: 0
- RightSquareBracket
- Semicolon
- Newline
- Identifier: y
- Assign
- Identifier: vargv
- LeftSquareBracket
- Integer: 1
- RightSquareBracket
- Semicolon
- Newline
- Identifier: z
- Assign
- Identifier: vargv
- LeftSquareBracket
- Integer: 2
- RightSquareBracket
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Newline
- Newline
- Identifier: x
- Assign
- Integer: 0
- Semicolon
- Newline
- Identifier: y
- Assign
- Integer: 0
- Semicolon
- Newline
- Identifier: z
- Assign
- Integer: 0
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Class
- Identifier: Vector3
- Extends
- Identifier: BaseVector
- LeftCurlyBrace
- Newline
- Function
- Identifier: _add
- LeftParenthesis
- Identifier: other
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- If
- LeftParenthesis
- Identifier: other
- InstaceOf
- This
- Period
- Identifier: getclass
- LeftParenthesis
- RightParenthesis
- RightParenthesis
- Newline
- Return
- DoubleColon
- Identifier: Vector3
- LeftParenthesis
- Identifier: x
- Plus
- Identifier: other
- Period
- Identifier: x
- Comma
- Identifier: y
- Plus
- Identifier: other
- Period
- Identifier: y
- Comma
- Identifier: z
- Plus
- Identifier: other
- Period
- Identifier: z
- RightParenthesis
- Semicolon
- Newline
- Else
- Newline
- Throw
- String: wrong parameter
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Function
- Identifier: Print
- LeftParenthesis
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: x
- Plus
- String: ","
- Plus
- Identifier: y
- Plus
- String: ","
- Plus
- Identifier: z
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Newline
- Local
- Identifier: v0
- Assign
- Identifier: Vector3
- LeftParenthesis
- Integer: 1
- Comma
- Integer: 2
- Comma
- Integer: 3
- RightParenthesis
- Newline
- Local
- Identifier: v1
- Assign
- Identifier: Vector3
- LeftParenthesis
- Integer: 11
- Comma
- Integer: 12
- Comma
- Integer: 13
- RightParenthesis
- Newline
- Local
- Identifier: v2
- Assign
- Identifier: v0
- Plus
- Identifier: v1
- Semicolon
- Newline
- Identifier: v2
- Period
- Identifier: Print
- LeftParenthesis
- RightParenthesis
- Semicolon
- Newline
- Newline
- Identifier: FakeNamespace
- NewSlot
- LeftCurlyBrace
- Newline
- Identifier: Utils
- Assign
- LeftCurlyBrace
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Newline
- Class
- Identifier: FakeNamespace
- Period
- Identifier: Utils
- Period
- Identifier: SuperClass
- LeftCurlyBrace
- Newline
- Identifier: constructor
- LeftParenthesis
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: FakeNamespace.Utils.SuperClass
- RightParenthesis
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Newline
- Local
- Identifier: testy
- Assign
- Identifier: FakeNamespace
- Period
- Identifier: Utils
- Period
- Identifier: SuperClass
- LeftParenthesis
- RightParenthesis
- Semicolon
- Newline
