squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-squirrel_repo-coroutines.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for squirrel_repo/coroutines.nut
---
- Function
- Identifier: coroutine_test
- LeftParenthesis
- Identifier: a
- Comma
- Identifier: b
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- Identifier: a
- Plus
- String: " "
- Plus
- Identifier: b
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Local
- Identifier: ret
- Assign
- DoubleColon
- Identifier: suspend
- LeftParenthesis
- String: suspend 1
- RightParenthesis
- Semicolon
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "the coroutine says "
- Plus
- Identifier: ret
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Identifier: ret
- Assign
- DoubleColon
- Identifier: suspend
- LeftParenthesis
- String: suspend 2
- RightParenthesis
- Semicolon
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "the coroutine says "
- Plus
- Identifier: ret
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Identifier: ret
- Assign
- DoubleColon
- Identifier: suspend
- LeftParenthesis
- String: suspend 3
- RightParenthesis
- Semicolon
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "the coroutine says "
- Plus
- Identifier: ret
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Return
- String: "I'm done"
- Newline
- RightCurlyBrace
- Newline
- Newline
- Local
- Identifier: coro
- Assign
- DoubleColon
- Identifier: newthread
- LeftParenthesis
- Identifier: coroutine_test
- RightParenthesis
- Semicolon
- Newline
- Newline
- Local
- Identifier: susparam
- Assign
- Identifier: coro
- Period
- Identifier: call
- LeftParenthesis
- String: test
- Comma
- String: coroutine
- RightParenthesis
- Semicolon
- Newline
- Newline
- Local
- Identifier: i
- Assign
- Integer: 1
- Semicolon
- Newline
- Do
- Newline
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "suspend passed ["
- Plus
- Identifier: susparam
- Plus
- String: "]\n"
- RightParenthesis
- Newline
- Identifier: susparam
- Assign
- Identifier: coro
- Period
- Identifier: wakeup
- LeftParenthesis
- String: "ciao "
- Plus
- Identifier: i
- RightParenthesis
- Semicolon
- Newline
- Increment
- Identifier: i
- Semicolon
- Newline
- RightCurlyBrace
- While
- LeftParenthesis
- Identifier: coro
- Period
- Identifier: getstatus
- LeftParenthesis
- RightParenthesis
- Equals
- String: suspended
- RightParenthesis
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "return passed ["
- Plus
- Identifier: susparam
- Plus
- String: "]\n"
- RightParenthesis
- Newline
